@@ -7,18 +7,29 @@ import com.alphatica.alis.data.market.MarketName;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Predicate;
 
 import static com.alphatica.alis.data.market.MarketFilters.ALL;
 
 public class TimeMarketDataSet {
-
+	private static final Map<Time, TimeMarketDataSet> cache = new ConcurrentHashMap<>(1024);
 	private final Map<MarketName, TimeMarketData> set;
 	private final Time time;
+
+	private static MarketData cachedMarketData;
 
 	public TimeMarketDataSet(Map<MarketName, TimeMarketData> set, Time time) {
 		this.set = set;
 		this.time = time;
+	}
+
+	public static TimeMarketDataSet getCached(Time time, MarketData marketData) {
+		if (marketData != cachedMarketData) {
+			cachedMarketData = marketData;
+			cache.clear();
+		}
+		return cache.computeIfAbsent(time, t -> build(t, marketData));
 	}
 
 	public static TimeMarketDataSet build(Time time, MarketData marketData) {
